<resources>
    <string name="profile_title">Profile</string>
    <string name="profile_back">Back</string>
    <string name="profile_sign_in">Sign in to view this profile</string>
    <string name="profile_no_bio">No biography</string>
    <string name="profile_following_count">Following %1$d</string>
    <string name="profile_followers_count">Followers %1$d</string>
    <string name="profile_liked_count">Likes received: %1$d</string>
    <string name="profile_refresh_profile">Refresh profile</string>
    <string name="profile_refresh">Refresh</string>
    <string name="profile_game_data_notice">Game data is updated periodically by the official service.</string>
    <string name="profile_careers">Jobs and levels</string>
    <string name="profile_achievements">Achievements</string>
    <string name="profile_career_level">%1$s · Lv. %2$d</string>
    <string name="profile_no_data">No data available</string>
    <string name="profile_private">Not public</string>
    <string name="profile_followers_notice">Opening or refreshing this list may clear the new-follower reminder.</string>
    <string name="profile_empty">No items</string>
    <string name="profile_open_content">Open detail</string>
    <string name="profile_failed">Could not load. Existing content is retained.</string>
    <string name="profile_retry">Retry</string>
    <string name="profile_loading">Loading…</string>
    <string name="profile_load_more">Load more</string>
    <string name="profile_overview">Overview</string>
    <string name="profile_posts">Posts</string>
    <string name="profile_guides">Guides</string>
    <string name="profile_dynamics">Updates</string>
    <string name="profile_favorite_posts">Saved posts</string>
    <string name="profile_favorite_guides">Saved guides</string>
    <string name="profile_following">Following</string>
    <string name="profile_followers">Followers</string>
    <string name="profile_guild">Free company</string>
    <string name="profile_created">Character created</string>
    <string name="profile_last_login">Last login</string>
    <string name="profile_play_time">Total play time</string>
    <string name="profile_housing">Housing</string>
    <string name="profile_fantasia">Fantasia used</string>
    <string name="profile_treasure">Treasure dungeons cleared</string>
    <string name="profile_enemies">Frontline defeats</string>
    <string name="profile_island">Island Sanctuary rank</string>
    <string name="profile_crystal">Highest Crystalline Conflict rank</string>
    <string name="profile_fish">Fishing casts</string>
</resources>
